tests/baselines/reference/importHelpersNoModule.errors.txt
external.ts(6,1): error TS2354: This syntax requires an imported helper but module 'tslib' cannot be found.


==== external.ts (1 errors) ====
    export class A { }
    export class B extends A { }
    
    declare var dec: any;
    
    @dec
    ~~~~
!!! error TS2354: This syntax requires an imported helper but module 'tslib' cannot be found.
    class C {
        method(@dec x: number) {
        }
    }
    
==== script.ts (0 errors) ====
    class A { }
    class B extends A { }
    
    declare var dec: any;
    
    @dec
    class C {
        method(@dec x: number) {
        }
    }
    